tests/errors/enum_function_arg_requires_cast.dang
enum Status { PASSED FAILED }

pub echo(status: Status!): Status! {
  status
}

# String! is not implicitly assignable to an enum argument.
let bad = echo("PASSED")
